sid-kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sid
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: sid
spec:
  selector:
    app: db
  type: NodePort  
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sid-virtual-host-ingress
  namespace: sid
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  tls:
  - hosts:
      - scim.sid.svc.cluster.local
      - idserver.sid.svc.cluster.local
      - website.sid.svc.cluster.local
      - credentialissuer.sid.svc.cluster.local
      - credentialissuerwebsite.sid.svc.cluster.local
    secretName: testsecret-tls
  rules:
  - host: "scim.sid.svc.cluster.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: scim
            port:
              number: 80
  - host: "idserver.sid.svc.cluster.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: idserver
            port:
              number: 80
  - host: "website.sid.svc.cluster.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: website
            port:
              number: 80
  - host: "credentialissuer.sid.svc.cluster.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: credentialissuer
            port:
              number: 80
  - host: "credentialissuerwebsite.sid.svc.cluster.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: credentialissuerwebsite
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: scim
  namespace: sid
spec:
  type: NodePort
  selector:
    app: scim-deploy
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      protocol: TCP
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: idserver
  namespace: sid
spec:
  type: NodePort
  selector:
    app: idserver-deploy
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      protocol: TCP
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: sid
spec:
  type: NodePort
  selector:
    app: website-deploy
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      protocol: TCP
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: credentialissuer
  namespace: sid
spec:
  type: NodePort
  selector:
    app: credentialissuer-deploy
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      protocol: TCP
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: credentialissuerwebsite
  namespace: sid
spec:
  type: NodePort
  selector:
    app: credentialissuerwebsite-deploy
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      protocol: TCP
      port: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: sid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  minReadySeconds: 5
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scim-deployment
  namespace: sid
  labels:
    app: scim-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scim-deploy
  template:
    metadata:
      labels:
        app: scim-deploy
    spec:
      subdomain: localhost
      containers:
      - name: scim-deploy
        image: simpleidserver/scim:5.0.1
        ports:
          - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idserver-deployment
  namespace: sid
  labels:
    app: idserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idserver-deploy
  template:
    metadata:
      labels:
        app: idserver-deploy
    spec:
      subdomain: localhost
      containers:
      - name: idserver-deploy
        image: simpleidserver/idserver:5.0.1
        ports:
          - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  namespace: sid
  labels:
    app: website-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website-deploy
  template:
    metadata:
      labels:
        app: website-deploy
    spec:
      subdomain: localhost
      containers:
      - name: website-deploy
        image: simpleidserver/website:5.0.1
        ports:
          - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credentialissuer-deployment
  namespace: sid
  labels:
    app: credentialissuer-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: credentialissuer-deploy
  template:
    metadata:
      labels:
        app: credentialissuer-deploy
    spec:
      subdomain: localhost
      containers:
      - name: credentialissuer-deploy
        image: simpleidserver/credentialissuer:5.0.1
        ports:
          - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credentialissuerwebsite-deployment
  namespace: sid
  labels:
    app: credentialissuerwebsite-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: credentialissuerwebsite-deploy
  template:
    metadata:
      labels:
        app: credentialissuerwebsite-deploy
    spec:
      subdomain: localhost
      containers:
      - name: credentialissuerwebsite-deploy
        image: simpleidserver/credentialissuerwebsite:5.0.1
        ports:
          - containerPort: 80
